syntax = "proto3";

package api.verifyCode;

option go_package = "driver/api/verifyCode;verifyCode";


service VerifyCode {
	rpc GetVerifyCode (GetVerifyCodeRequest) returns (GetVerifyCodeReply);
}

enum TYPE {
	DEFAULT=0;
	DIGIT=1;
	LETTER=2;
	MIXED=3;
}

message GetVerifyCodeRequest {
	uint32 length=1;
	TYPE type=2;
}
message GetVerifyCodeReply {
	string code=1;
}
